--- a/templates/base.html
+++ b/templates/base.html
@@ -13,9 +13,15 @@
 
   </head>
   <body>
-   {% block content %}
-   
-   {% endblock content %}
+    {% include "components/navbar.html" %}
+    <div class="container">
+      {% block content %}
+      
+      {% endblock content %}
+
+    </div>
+
+    {% include "components/footer.html" %}
 
     <!-- Optional JavaScript; choose one of the two! -->
 
