--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -84,6 +84,9 @@
             } else {
                alert("An error occured. Please try again.")
             }
+         } else if (xhr.status === 401) {  // Not Authenticaed User
+            alert("You must be logged In, please login first.")
+            window.location.href = "/login"
          } else if (xhr.status === 500) {  // 500 server error
             alert("There was a server error, please try again later.")
          }
