--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -116,7 +116,7 @@
       xhr.onload = function() {
          // console.log(xhr.response)
          const serverResponse = xhr.response
-         const listedItems = serverResponse.response  // array (python list), response is the key that contains a list from the data dictionairy
+         const listedItems = serverResponse 
          var finalTweetStr = ""
          var i;
          for (i=0; i<listedItems.length; i++) {
